OldArchive/a69f3a6e5ebc51bbf9adceffc3f4c42c-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:39:12: error: ‘f’ was not declared in this scope
     f ( b2 );
            ^
main.cpp: At global scope:
main.cpp:45:17: warning: ‘void {anonymous}::f(Base*)’ defined but not used [-Wunused-function]
     static void f ( Base* base) 
                 ^
